Working through CountNRooksSolutions. Needs optimization.

--- a/BoardViewer.html
+++ b/BoardViewer.html
@@ -48,10 +48,11 @@
         ]);
 
         var n = 4;
-        findNRooksSolution(n);
-        countNRooksSolutions(n);
-        findNQueensSolution(n);
-        countNQueensSolutions(n);
+         findNRooksSolution(n);
+         countNRooksSolutions(n);
+        // findNQueensSolution(n);
+        // countNQueensSolutions(n);
+        test();
       });
     </script>
   </body>
